; ModuleID = '/home/carl/AnghaBench/RetroArch/menu/drivers/extr_materialui.c_materialui_set_list_view_type.c'
source_filename = "/home/carl/AnghaBench/RetroArch/menu/drivers/extr_materialui.c_materialui_set_list_view_type.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { i32, i8*, i64, i32, i32 }
%struct.TYPE_7__ = type { %struct.TYPE_6__ }
%struct.TYPE_6__ = type { i32, i32 }

@MUI_LIST_VIEW_DEFAULT = common dso_local global i8* null, align 8
@MUI_LIST_VIEW_PLAYLIST = common dso_local global i8* null, align 8
@MENU_THUMBNAIL_RIGHT = common dso_local global i32 0, align 4
@MUI_LIST_VIEW_PLAYLIST_THUMB_LIST_SMALL = common dso_local global i8* null, align 8
@MUI_LIST_VIEW_PLAYLIST_THUMB_LIST_MEDIUM = common dso_local global i8* null, align 8
@MUI_LIST_VIEW_PLAYLIST_THUMB_DUAL_ICON = common dso_local global i8* null, align 8
@MUI_LIST_VIEW_PLAYLIST_THUMB_LIST_LARGE = common dso_local global i8* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_8__*, %struct.TYPE_7__*)* @materialui_set_list_view_type to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @materialui_set_list_view_type(%struct.TYPE_8__* %0, %struct.TYPE_7__* %1) #0 {
  %3 = alloca %struct.TYPE_8__*, align 8
  %4 = alloca %struct.TYPE_7__*, align 8
  store %struct.TYPE_8__* %0, %struct.TYPE_8__** %3, align 8
  store %struct.TYPE_7__* %1, %struct.TYPE_7__** %4, align 8
  %5 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %6 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %5, i32 0, i32 4
  %7 = load i32, i32* %6, align 4
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %15, label %9

9:                                                ; preds = %2
  %10 = load i8*, i8** @MUI_LIST_VIEW_DEFAULT, align 8
  %11 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %12 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %11, i32 0, i32 1
  store i8* %10, i8** %12, align 8
  %13 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %14 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %13, i32 0, i32 0
  store i32 0, i32* %14, align 8
  br label %83

15:                                               ; preds = %2
  %16 = load i8*, i8** @MUI_LIST_VIEW_PLAYLIST, align 8
  %17 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %18 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %17, i32 0, i32 1
  store i8* %16, i8** %18, align 8
  %19 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %20 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %19, i32 0, i32 3
  %21 = load i32, i32* %20, align 8
  %22 = load i32, i32* @MENU_THUMBNAIL_RIGHT, align 4
  %23 = call i32 @menu_thumbnail_is_enabled(i32 %21, i32 %22)
  %24 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %25 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %24, i32 0, i32 0
  store i32 %23, i32* %25, align 8
  %26 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %27 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 8
  %29 = icmp ne i32 %28, 0
  br i1 %29, label %30, label %82

30:                                               ; preds = %15
  %31 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %32 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %31, i32 0, i32 2
  %33 = load i64, i64* %32, align 8
  %34 = icmp ne i64 %33, 0
  br i1 %34, label %35, label %58

35:                                               ; preds = %30
  %36 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %37 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %36, i32 0, i32 0
  %38 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %37, i32 0, i32 0
  %39 = load i32, i32* %38, align 4
  switch i32 %39, label %53 [
    i32 128, label %40
    i32 129, label %44
    i32 130, label %48
    i32 131, label %52
  ]

40:                                               ; preds = %35
  %41 = load i8*, i8** @MUI_LIST_VIEW_PLAYLIST_THUMB_LIST_SMALL, align 8
  %42 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %43 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %42, i32 0, i32 1
  store i8* %41, i8** %43, align 8
  br label %57

44:                                               ; preds = %35
  %45 = load i8*, i8** @MUI_LIST_VIEW_PLAYLIST_THUMB_LIST_MEDIUM, align 8
  %46 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %47 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %46, i32 0, i32 1
  store i8* %45, i8** %47, align 8
  br label %57

48:                                               ; preds = %35
  %49 = load i8*, i8** @MUI_LIST_VIEW_PLAYLIST_THUMB_DUAL_ICON, align 8
  %50 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %51 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %50, i32 0, i32 1
  store i8* %49, i8** %51, align 8
  br label %57

52:                                               ; preds = %35
  br label %53

53:                                               ; preds = %35, %52
  %54 = load i8*, i8** @MUI_LIST_VIEW_PLAYLIST, align 8
  %55 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %56 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %55, i32 0, i32 1
  store i8* %54, i8** %56, align 8
  br label %57

57:                                               ; preds = %53, %48, %44, %40
  br label %81

58:                                               ; preds = %30
  %59 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %60 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %59, i32 0, i32 0
  %61 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %60, i32 0, i32 1
  %62 = load i32, i32* %61, align 4
  switch i32 %62, label %76 [
    i32 132, label %63
    i32 133, label %67
    i32 134, label %71
    i32 135, label %75
  ]

63:                                               ; preds = %58
  %64 = load i8*, i8** @MUI_LIST_VIEW_PLAYLIST_THUMB_LIST_SMALL, align 8
  %65 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %66 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %65, i32 0, i32 1
  store i8* %64, i8** %66, align 8
  br label %80

67:                                               ; preds = %58
  %68 = load i8*, i8** @MUI_LIST_VIEW_PLAYLIST_THUMB_LIST_MEDIUM, align 8
  %69 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %70 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %69, i32 0, i32 1
  store i8* %68, i8** %70, align 8
  br label %80

71:                                               ; preds = %58
  %72 = load i8*, i8** @MUI_LIST_VIEW_PLAYLIST_THUMB_LIST_LARGE, align 8
  %73 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %74 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %73, i32 0, i32 1
  store i8* %72, i8** %74, align 8
  br label %80

75:                                               ; preds = %58
  br label %76

76:                                               ; preds = %58, %75
  %77 = load i8*, i8** @MUI_LIST_VIEW_PLAYLIST, align 8
  %78 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %79 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %78, i32 0, i32 1
  store i8* %77, i8** %79, align 8
  br label %80

80:                                               ; preds = %76, %71, %67, %63
  br label %81

81:                                               ; preds = %80, %57
  br label %82

82:                                               ; preds = %81, %15
  br label %83

83:                                               ; preds = %82, %9
  ret void
}

declare dso_local i32 @menu_thumbnail_is_enabled(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
